scripts/samples/bookinfo/dump.json
{
    "apiVersion": "networking.istio.io/v1alpha3",
    "kind": "ServiceEntry",
    "metadata": {
        "annotations": {
            "multicluster.istio.io/provenance": "default.clusterb.myorg-services"
        },
        "clusterName": "",
        "creationTimestamp": "2018-09-18T13:49:48Z",
        "generation": 1,
        "name": "service-entry-clusterb.myorg-services",
        "namespace": "default",
        "resourceVersion": "299443",
        "selfLink": "/apis/networking.istio.io/v1alpha3/namespaces/default/serviceentries/service-entry-clusterb.myorg-services",
        "uid": "b593d10a-bb49-11e8-bc59-86aa33f2b1f4"
    },
    "spec": {
        "endpoints": [
            {
                "address": "169.61.18.10",
                "ports": {
                    "http": 80
                }
            }
        ],
        "hosts": [
            "reviews.default.svc.cluster.local"
        ],
        "ports": [
            {
                "name": "http",
                "number": 9080,
                "protocol": "HTTP"
            }
        ],
        "resolution": "STATIC"
    }
}
{
    "apiVersion": "networking.istio.io/v1alpha3",
    "kind": "DestinationRule",
    "metadata": {
        "annotations": {
            "multicluster.istio.io/provenance": "default.clusterb.myorg-services"
        },
        "clusterName": "",
        "creationTimestamp": "2018-09-18T13:49:48Z",
        "generation": 1,
        "name": "dest-rule-clusterb.myorg-services-default",
        "namespace": "default",
        "resourceVersion": "299444",
        "selfLink": "/apis/networking.istio.io/v1alpha3/namespaces/default/destinationrules/dest-rule-clusterb.myorg-services-default",
        "uid": "b59b2cf1-bb49-11e8-bc59-86aa33f2b1f4"
    },
    "spec": {
        "host": "reviews.default.svc.cluster.local",
        "trafficPolicy": {
            "tls": {
                "caCertificates": "/etc/certs/root-cert.pem",
                "clientCertificate": "/etc/certs/cert-chain.pem",
                "mode": "MUTUAL",
                "privateKey": "/etc/certs/key.pem",
                "sni": "reviews.default.svc.cluster.local"
            }
        }
    }
}
{
    "apiVersion": "networking.istio.io/v1alpha3",
    "kind": "DestinationRule",
    "metadata": {
        "annotations": {
            "multicluster.istio.io/provenance": "default.reviews"
        },
        "clusterName": "",
        "creationTimestamp": "2018-09-18T13:49:46Z",
        "generation": 1,
        "name": "dest-rule-reviews-default-notls",
        "namespace": "default",
        "resourceVersion": "2573285",
        "selfLink": "/apis/networking.istio.io/v1alpha3/namespaces/default/destinationrules/dest-rule-reviews-default-notls",
        "uid": "b465e743-bb49-11e8-8f6a-c639196dac94"
    },
    "spec": {
        "host": "reviews.default.svc.cluster.local",
        "subsets": [
            {
                "name": "notls",
                "trafficPolicy": {
                    "tls": {}
                }
            }
        ]
    }
}
{
    "apiVersion": "networking.istio.io/v1alpha3",
    "kind": "Gateway",
    "metadata": {
        "annotations": {
            "multicluster.istio.io/provenance": "default.reviews"
        },
        "clusterName": "",
        "creationTimestamp": "2018-09-18T13:49:46Z",
        "generation": 1,
        "name": "istio-ingressgateway-reviews-default",
        "namespace": "default",
        "resourceVersion": "2573286",
        "selfLink": "/apis/networking.istio.io/v1alpha3/namespaces/default/gateways/istio-ingressgateway-reviews-default",
        "uid": "b46e8798-bb49-11e8-8f6a-c639196dac94"
    },
    "spec": {
        "selector": {
            "istio": "ingressgateway"
        },
        "servers": [
            {
                "hosts": [
                    "reviews.default.svc.cluster.local"
                ],
                "port": {
                    "name": "reviews-default-80",
                    "number": 80,
                    "protocol": "TLS"
                },
                "tls": {}
            }
        ]
    }
}
{
    "apiVersion": "networking.istio.io/v1alpha3",
    "kind": "VirtualService",
    "metadata": {
        "annotations": {
            "multicluster.istio.io/provenance": "default.reviews"
        },
        "clusterName": "",
        "creationTimestamp": "2018-09-18T13:49:46Z",
        "generation": 1,
        "name": "ingressgateway-to-reviews-default",
        "namespace": "default",
        "resourceVersion": "2573287",
        "selfLink": "/apis/networking.istio.io/v1alpha3/namespaces/default/virtualservices/ingressgateway-to-reviews-default",
        "uid": "b477409f-bb49-11e8-8f6a-c639196dac94"
    },
    "spec": {
        "gateways": [
            "istio-ingressgateway-reviews-default"
        ],
        "hosts": [
            "reviews.default.svc.cluster.local"
        ],
        "tls": [
            {
                "match": [
                    {
                        "port": 80,
                        "sniHosts": [
                            "reviews.default.svc.cluster.local"
                        ]
                    }
                ],
                "route": [
                    {
                        "destination": {
                            "host": "reviews.default.svc.cluster.local",
                            "port": {
                                "number": 9080
                            },
                            "subset": "notls"
                        }
                    }
                ]
            }
        ]
    }
}
