scripts/samples/bookinfo/reviews-exposure-starter-v1-v2.yaml
# Holds a DestinationRule with a defined subset for testing merging generated DR with existing DR
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dest-rule-reviews-default-notls 
  namespace: default
spec:
  host: reviews.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
