scripts/samples/bookinfo/reviews-selectorless-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: reviews
spec:
  ports:
  - protocol: TCP
    port: 9080
    targetPort: 9080
#---
#kind: Endpoints
#apiVersion: v1
#metadata:
#  name: reviews
#subsets:
#  - addresses:
#      - ip: 1.2.3.4
#    ports:
#      - port: 9080
